feat(json): update `JsonObjectMappedBean` for improved type handling and error feedback
- Added `@Nullable` annotations for enhanced nullability support.
- Refined `convertValue` method to throw `IllegalArgumentException` for unsupported conversions.
- Simplified list conversion logic by removing unused code snippets.
- Enhanced Javadoc for interface clarity.

Signed-off-by: sinri <e.joshua.s.e@gmail.com>